--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -9,6 +9,8 @@ sites:
     url: https://agones.gr/.well-known/ai-plugin.json
   - name: Aitoolhunt
     url: https://www.aitoolhunt.com/.well-known/ai-plugin.json
+  - name: Algorithma
+    url: https://algorithma.ruvnet.repl.co/.well-known/ai-plugin.json
   - name: Alphavantage
     url: https://www.alphavantage.co/.well-known/ai-plugin.json
   - name: Amazingtalker
@@ -161,6 +163,8 @@ sites:
     url: https://olomouc.eu/.well-known/ai-plugin.json
   - name: Openarch
     url: https://www.openarch.nl/.well-known/ai-plugin.json
+  - name: Outscraper
+  - url: https://outscraper.com/.well-known/ai-plugin.json
   - name: Pandia
     url: https://pandia.pro/.well-known/ai-plugin.json
   - name: Parcelsapp
@@ -287,6 +291,8 @@ sites:
     url: https://woxo.tech/.well-known/ai-plugin.json
   - name: Yabble
     url: https://yabblezone.net/.well-known/ai-plugin.json
+  - name: YachtSearch
+  - url: https://www.denisonyachtsales.com/.well-known/ai-plugin.json
   - name: Yelp
     url: https://www.yelp.com/.well-known/ai-plugin.json
   - name: Yourtango
